objects/Organization_Address__e.object
<CustomObject>
    <description>Channel for publishing Organization Address events</description>
    <fields>
        <fullName>Address_Guid__c</fullName>
        <description>Unique Guid associated with the Address record itself</description>
        <label>Address Guid</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Indicates the Street Address</description>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_Sf_User_Id__c</fullName>
        <label>Changed By Sf User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By_Username__c</fullName>
        <label>Changed By Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Address City</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Address Country</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Historical_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Historical Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude value of the address</description>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Longitude value of this address</description>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Indicates an Address Events Alternative Address Name</description>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes associated with Address</description>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Org_Address_Guid__c</fullName>
        <description>The Unique Guid represented by the Organization and Address relationship</description>
        <label>Org Address Guid</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Address_Id__c</fullName>
        <description>The Unique Id represented by the Organization and Address relationship</description>
        <label>Org Address Id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Id__c</fullName>
        <description>Organization Id associated with Address event</description>
        <label>Organization Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Address State</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Unique Address Type</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Ext__c</fullName>
        <description>Address Zip Code Ext</description>
        <label>Zip Code Ext</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Address Zip Code</description>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>event_type__c</fullName>
        <description>Platform Event Type</description>
        <label>event type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Organization Address</label>
    <pluralLabel>Organization Addresses</pluralLabel>
</CustomObject>